[tool.poetry]
name = "cipher_kmh2259"
version = "0.1.0"
description = "Python ppackage with the cipher function to encrypt text!"
authors = ["Krystal Hahn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
